Fix button alignment

--- a/src/App.css
+++ b/src/App.css
@@ -116,6 +116,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   border-radius: 3px;
 }
 
